# cache_engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  recommended.md
benchmarks/: main.cpp
benchmarks/google/: .gitkeep  CMakeLists.txt  algorithm_comparison.cpp  cache_performance.cpp  memory_efficiency.cpp  regression_tests.cpp  scaling_analysis.cpp
cmake/modules/: static_analysis.cmake
inc/cache_engine/: cache.hpp
inc/cache_engine/policies/: access_policies.hpp  all_policies.hpp  capacity_policies.hpp  eviction_policies.hpp  policy_interfaces.hpp  policy_traits.hpp  storage_policies.hpp
inc/cache_engine/policies/eviction/: fifo_policy.hpp  lfu_policy.hpp  lru_policy.hpp  mfu_policy.hpp  mru_policy.hpp  random_policy.hpp
inc/cache_engine/policies/storage/: frequency_map_storage.hpp  hash_list_storage.hpp  hash_queue_storage.hpp  optimized_random_storage.hpp  storage_policies.hpp
scripts/: check_file_headers  compile_build  compile_textures.bat  create_class  utilities
tests/integration/: cache_integration.cpp
tests/property/: cache_invariants.cpp
tests/unit/: lru_tests.cpp
